--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.8",
     "@emailjs/browser": "^4.4.1",
+    "@fortawesome/fontawesome-free": "^7.0.1",
     "@tsparticles/angular": "^3.0.0",
+    "bootstrap": "^5.3.8",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
